--- a/Api/Api.csproj
+++ b/Api/Api.csproj
@@ -74,7 +74,9 @@
     <Compile Include="Modules\ImageEntityModule.cs" />
     <Compile Include="Modules\MarkModule.cs" />
     <Compile Include="Modules\TopicModule.cs" />
+    <Compile Include="Modules\TaskModule.cs" />
     <Compile Include="Parameters\MarkParameter.cs" />
+    <Compile Include="Parameters\TaskParameter.cs" />
     <Compile Include="Parameters\TopicParameter.cs" />
     <Compile Include="Platform\IThumbnailProvider.cs" />
     <Compile Include="IO\ArchiveManifest.cs" />
