--- a/DataModel/app.config
+++ b/DataModel/app.config
@@ -32,6 +32,9 @@
       <Ontology Uri="http://www.semanticdesktop.org/ontologies/2007/03/22/nfo#" Prefix="nfo">
         <FileSource Location="Ontologies/nfo.rdf"/>
       </Ontology>
+      <Ontology Uri="http://www.semanticdesktop.org/ontologies/2008/05/20/tmo#" Prefix="tmo">
+        <FileSource Location="Ontologies/tmo.trig"/>
+      </Ontology>
       <Ontology Uri="http://w3id.org/art/terms/1.0/" Prefix="art">
         <FileSource Location="Ontologies/art.ttl"/>
       </Ontology>
