Implementing feedback feature. Chat, Topics and Todos now use agentService.

--- a/DataModel/DataModel.csproj
+++ b/DataModel/DataModel.csproj
@@ -55,7 +55,9 @@
     <Compile Include="ObjectModel\Agents\Roles\ProjectAdministratorRole.cs" />
     <Compile Include="ObjectModel\Agents\User.cs" />
     <Compile Include="ObjectModel\Communication.cs" />
+    <Compile Include="ObjectModel\Entities\ApprovalRequest.cs" />
     <Compile Include="ObjectModel\Entities\Collection.cs" />
+    <Compile Include="ObjectModel\Entities\Request.cs" />
     <Compile Include="ObjectModel\Entities\Task.cs" />
     <Compile Include="ObjectModel\Entities\TaskPriority.cs" />
     <Compile Include="ObjectModel\Entities\TaskState.cs" />
