--- a/DataModel/app.config
+++ b/DataModel/app.config
@@ -69,6 +69,7 @@
             <Graph Uri="http://purl.org/dc/elements/1.1/" />
             <Graph Uri="http://w3id.org/art/terms/1.0/" />
             <Graph Uri="http://w3id.org/art/terms/1.0/synchronization/" />
+            <Graph Uri="http://rdfs.org/sioc/ns#" />
           </Graphs>
         </RuleSet>
       </RuleSets>
