Implemented sync of user agents.

--- a/DataModel/DataModel.csproj
+++ b/DataModel/DataModel.csproj
@@ -40,6 +40,7 @@
   <ItemGroup>
     <Compile Include="IModelSynchronizationState.cs" />
     <Compile Include="IUser.cs" />
+    <Compile Include="IValidatable.cs" />
     <Compile Include="IViewModule.cs" />
     <Compile Include="Extensions\DateTimeExtensions.cs" />
     <Compile Include="IModelProvider.cs" />
