Image archive writers now export the information elements rather than the file data object.

--- a/Api/Api.csproj
+++ b/Api/Api.csproj
@@ -75,12 +75,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="IO\ArchiveWriters\EntityArchiveWriter.cs" />
-    <Compile Include="IO\ArchiveWriters\FileSyncArchiveWriter.cs" />
+    <Compile Include="IO\ArchiveWriters\ImageSyncArchiveWriter.cs" />
     <Compile Include="IO\S3Uploader.cs" />
     <Compile Include="Modules\CommentsModule.cs" />
     <Compile Include="Infrastructure\StreamExtensions.cs" />
     <Compile Include="IO\ArchiveWriters\ActivityArchiveWriter.cs" />
-    <Compile Include="IO\ArchiveWriters\FileExportArchiveWriter.cs" />
+    <Compile Include="IO\ArchiveWriters\ImageExportArchiveWriter.cs" />
     <Compile Include="Modules\FilesModule.cs" />
     <Compile Include="Modules\InfluencesModule.cs" />
     <Compile Include="Modules\MarksModule.cs" />
