updated libartivity and apid

--- a/Apid/Apid.csproj
+++ b/Apid/Apid.csproj
@@ -121,6 +121,7 @@
     <Compile Include="Modules\SetupModule.cs" />
     <Compile Include="Modules\SparqlModule.cs" />
     <Compile Include="Modules\SyncModule.cs" />
+    <Compile Include="Platform\OwnerProvider.cs" />
     <Compile Include="Plugins\PluginManifestRegistryInfo.cs" />
     <Compile Include="Plugins\ProgramInstallationWatchdogFactory.cs" />
     <Compile Include="Protocols\Atom\AtomLink.cs" />
