--- a/DataModel/DataModel.csproj
+++ b/DataModel/DataModel.csproj
@@ -56,9 +56,11 @@
     <Compile Include="ObjectModel\Agents\Roles\ProjectAdministratorRole.cs" />
     <Compile Include="ObjectModel\Agents\User.cs" />
     <Compile Include="ObjectModel\Communication.cs" />
-    <Compile Include="ObjectModel\Entities\ApprovalRequest.cs" />
+    <Compile Include="ObjectModel\Entities\Comments\ApprovalRequest.cs" />
+    <Compile Include="ObjectModel\Entities\Comments\ApprovalResponse.cs" />
     <Compile Include="ObjectModel\Entities\Collection.cs" />
-    <Compile Include="ObjectModel\Entities\Request.cs" />
+    <Compile Include="ObjectModel\Entities\Comments\FeedbackResponse.cs" />
+    <Compile Include="ObjectModel\Entities\Comments\FeedbackRequest.cs" />
     <Compile Include="ObjectModel\Entities\Task.cs" />
     <Compile Include="ObjectModel\Entities\TaskPriority.cs" />
     <Compile Include="ObjectModel\Entities\TaskState.cs" />
