--- a/Journal/bower.json
+++ b/Journal/bower.json
@@ -16,9 +16,17 @@
     "tests"
   ],
   "dependencies": {
+    "font-roboto": "^0.0.2",
+    "material-design-iconic-font": "^2.2.0",
     "jquery": "^2.2.0",
     "jquery-editable-select": "^2.0.0",
     "jquery-ui": "^1.12.1",
+    "jquery-appear": "^0.2.6",
+    "base64": "^1.0.0",
+    "bootstrap": "^3.3.6",
+    "bootstrap-colorpicker": "^2.3.3",
+    "bootstrap-switch": "^3.3.2",
+    "d3": "^4.2.3",
     "angular": "1.5.8",
     "angular-bootstrap": "^2.1.3",
     "angular-dragdrop": "^1.0.13",
@@ -29,21 +37,13 @@
     "angular-translate": "^2.13.0",
     "angular-ui": "^0.4.0",
     "angular-ui-layout": "^1.4.2",
+    "angular-scroll-glue": "^2.2.0",
     "angular-cookies": "=1.5.8",
-    "base64": "^1.0.0",
-    "bootstrap": "^3.3.6",
-    "bootstrap-colorpicker": "^2.3.3",
-    "bootstrap-switch": "^3.3.2",
-    "d3": "^4.2.3",
-    "font-roboto": "^0.0.2",
-    "material-design-iconic-font": "^2.2.0",
+    "angular-emojione": "*",
     "moment": "~2.15.1",
     "moment-duration-format": "^1.3.0",
     "EaselJS": "^0.8.2",
-    "yasgui": "^2.4.1",
-    "jquery-appear": "^0.2.6",
-    "angular-emojione": "*",
-    "angular-scroll-glue": "^2.2.0"
+    "yasgui": "^2.4.1"
   },
   "resolutions": {
     "angular": "1.5.8",
