--- a/DataModel/packages.config
+++ b/DataModel/packages.config
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net45" />
-  <package id="Semiodesk.Trinity.Core" version="0.9.152" targetFramework="net45" />
-  <package id="Semiodesk.Trinity.Modelling" version="0.9.152" targetFramework="net45" />
+  <package id="Semiodesk.Trinity.Core" version="0.9.159-rc" targetFramework="net45" />
+  <package id="Semiodesk.Trinity.Modelling" version="0.9.159-rc" targetFramework="net45" />
 </packages>
