--- a/Apid/packages.config
+++ b/Apid/packages.config
@@ -9,6 +9,6 @@
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net45" />
   <package id="OAuth2" version="0.8.40" targetFramework="net45" />
   <package id="RestSharp" version="105.2.3" targetFramework="net45" />
-  <package id="Semiodesk.Trinity.Core" version="0.9.152" targetFramework="net45" />
+  <package id="Semiodesk.Trinity.Core" version="0.9.159-rc" targetFramework="net45" />
   <package id="TinyVirtuoso" version="0.3.29" targetFramework="net45" />
 </packages>
