--- a/Test/Test.csproj
+++ b/Test/Test.csproj
@@ -31,15 +31,15 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="dotNetRDF, Version=1.0.10.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Semiodesk.Trinity.Core.0.9.152\lib\Net40\dotNetRDF.dll</HintPath>
+      <HintPath>..\packages\Semiodesk.Trinity.Core.0.9.159-rc\lib\Net40\dotNetRDF.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="dotNetRDF.Data.Virtuoso, Version=1.0.10.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Semiodesk.Trinity.Core.0.9.152\lib\Net40\dotNetRDF.Data.Virtuoso.dll</HintPath>
+      <HintPath>..\packages\Semiodesk.Trinity.Core.0.9.159-rc\lib\Net40\dotNetRDF.Data.Virtuoso.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="HtmlAgilityPack, Version=1.4.9.0, Culture=neutral, PublicKeyToken=bd319b19eaf3b43a, processorArchitecture=MSIL">
-      <HintPath>..\packages\Semiodesk.Trinity.Core.0.9.152\lib\Net40\HtmlAgilityPack.dll</HintPath>
+      <HintPath>..\packages\Semiodesk.Trinity.Core.0.9.159-rc\lib\Net40\HtmlAgilityPack.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="INIFileParser, Version=2.2.2.0, Culture=neutral, PublicKeyToken=79af7b307b65cf3c, processorArchitecture=MSIL">
@@ -55,11 +55,11 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="OpenLink.Data.Virtuoso, Version=7.2.3215.1, Culture=neutral, PublicKeyToken=6654f6917d07cb95, processorArchitecture=MSIL">
-      <HintPath>..\packages\Semiodesk.Trinity.Core.0.9.152\lib\Net40\OpenLink.Data.Virtuoso.dll</HintPath>
+      <HintPath>..\packages\Semiodesk.Trinity.Core.0.9.159-rc\lib\Net40\OpenLink.Data.Virtuoso.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="Semiodesk.Trinity, Version=0.9.152.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Semiodesk.Trinity.Core.0.9.152\lib\Net40\Semiodesk.Trinity.dll</HintPath>
+    <Reference Include="Semiodesk.Trinity, Version=0.9.159.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Semiodesk.Trinity.Core.0.9.159-rc\lib\Net40\Semiodesk.Trinity.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
@@ -74,7 +74,7 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="VDS.Common, Version=1.6.4.0, Culture=neutral, PublicKeyToken=ab5f4eb908061bf0, processorArchitecture=MSIL">
-      <HintPath>..\packages\Semiodesk.Trinity.Core.0.9.152\lib\Net40\VDS.Common.dll</HintPath>
+      <HintPath>..\packages\Semiodesk.Trinity.Core.0.9.159-rc\lib\Net40\VDS.Common.dll</HintPath>
       <Private>True</Private>
     </Reference>
   </ItemGroup>
