--- a/Test/packages.config
+++ b/Test/packages.config
@@ -3,7 +3,7 @@
   <package id="ini-parser" version="2.2.2" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="8.0.3" targetFramework="net45" />
   <package id="NUnit" version="3.6.1" targetFramework="net45" />
-  <package id="Semiodesk.Trinity.Core" version="0.9.152" targetFramework="net45" />
+  <package id="Semiodesk.Trinity.Core" version="0.9.159-rc" targetFramework="net45" />
   <package id="TinyVirtuoso" version="0.3.29" targetFramework="net45" />
   <package id="TinyVirtuoso.win" version="7.2.1" targetFramework="net45" />
 </packages>
