--- a/Journal/bower.json
+++ b/Journal/bower.json
@@ -25,10 +25,10 @@
     "base64": "^1.0.0",
     "bootstrap": "^3.3.6",
     "bootstrap-colorpicker": "^2.3.3",
-    "bootstrap-switch": "^3.3.2",
     "d3": "^4.2.3",
     "angular": "1.5.8",
     "angular-bootstrap": "^2.1.3",
+    "angular-bootstrap-toggle": "^0.1.2",
     "angular-dragdrop": "^1.0.13",
     "angular-hotkeys": "chieffancypants/angular-hotkeys#^1.7.0",
     "angular-input-modified": "^2.3.3",
