--- a/Test/packages.config
+++ b/Test/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="ini-parser" version="2.2.2" targetFramework="net45" />
+  <package id="Nancy" version="1.4.3" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="8.0.3" targetFramework="net45" />
   <package id="NUnit" version="3.6.1" targetFramework="net45" />
   <package id="Semiodesk.Trinity.Core" version="0.9.159-rc" targetFramework="net45" />
