--- a/DataModel/DataModel.csproj
+++ b/DataModel/DataModel.csproj
@@ -27,13 +27,13 @@
     <OutputPath>..\build\Release\</OutputPath>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug OSX|AnyCPU' ">
+  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug-OSX|AnyCPU' ">
     <Optimize>false</Optimize>
     <OutputPath>bin\Debug_OSX</OutputPath>
     <WarningLevel>4</WarningLevel>
     <DebugSymbols>true</DebugSymbols>
   </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release OSX|AnyCPU' ">
+  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release-OSX|AnyCPU' ">
     <Optimize>true</Optimize>
     <OutputPath>bin\Release OSX</OutputPath>
     <WarningLevel>4</WarningLevel>
