--- a/Journal/.vscode/launch.json
+++ b/Journal/.vscode/launch.json
@@ -38,7 +38,26 @@
             "console": "integratedTerminal",
             "sourceMaps": false,
             "outDir": null
-        }
+        },
+        {
+            "name": "Launch OSX Electron",
+            "type": "chrome",
+            "request": "launch",
+            "program": "${workspaceRoot}/main.js",
+            "stopOnEntry": false,
+            "args": [],
+            "cwd": "${workspaceRoot}",
+            "runtimeExecutable": "${workspaceRoot}/node_modules/.bin/electron",
+             "runtimeArgs": [
+        "${workspaceRoot}",
+        "--enable-logging",
+        "--remote-debugging-port=9222"
+     ],
+            "env": {},
+            "console": "integratedTerminal",
+            "sourceMaps": false,
+            "outDir": null
+        },
 
 
     ]
