--- a/Journal/package.json
+++ b/Journal/package.json
@@ -2,6 +2,7 @@
   "name": "artivity",
   "version": "1.6.168",
   "description": "Artivity is a tool to track the creative process.",
+  "repository": "bitbucket.org/semiodesk/artivity",
   "main": "main.js",
   "scripts": {
     "start": "electron main.js"
@@ -12,6 +13,7 @@
     "electron-settings": "^3.0.6",
     "file-url": "^2.0.0",
     "node-feedparser": "^1.0.1",
+    "opn": "^4.0.2",
     "request": "^2.79.0",
     "semver": "^5.3.0"
   },
