Switched localization from angular-translate to angular-gettext.

--- a/Journal/bower.json
+++ b/Journal/bower.json
@@ -34,12 +34,12 @@
     "angular-input-modified": "^2.3.3",
     "angular-moment": "^0.10.0",
     "angular-route": "1.5.8",
-    "angular-translate": "^2.13.0",
     "angular-ui": "^0.4.0",
     "angular-ui-layout": "^1.4.2",
     "angular-scroll-glue": "^2.2.0",
     "angular-cookies": "=1.5.8",
     "angular-emojione": "*",
+    "angular-gettext": "^2.3.9",
     "moment": "~2.15.1",
     "moment-duration-format": "^1.3.0",
     "EaselJS": "^0.8.2",
