--- a/Journal/package.json
+++ b/Journal/package.json
@@ -18,10 +18,12 @@
     "semver": "^5.3.0"
   },
   "devDependencies": {
-    "electron": "^1.4.7",
     "bower": "^1.8.0",
+    "electron": "^1.4.7",
     "electron-packager": "^8.3.0",
     "grunt": "^1.0.1",
+    "grunt-angular-gettext": "^2.3.4",
+    "grunt-bower-concat": "^1.0.0",
     "grunt-bower-install-simple": "^1.2.3",
     "grunt-chmod": "^1.1.1",
     "grunt-concurrent": "^2.3.1",
@@ -33,9 +35,8 @@
     "grunt-msbuild": "^0.3.7",
     "grunt-sass": "^1.2.1",
     "grunt-script-link-tags": "^1.0.2",
+    "grunt-strip-code": "^1.0.4",
     "grunt-wiredep": "^3.0.1",
-    "livereload": "^0.6.0",
-    "grunt-bower-concat": "^1.0.0",
-    "grunt-strip-code": "^1.0.4"
+    "livereload": "^0.6.0"
   }
 }
