--- a/Journal/bower.json
+++ b/Journal/bower.json
@@ -36,6 +36,7 @@
     "angular-route": "1.5.8",
     "angular-ui": "^0.4.0",
     "angular-ui-layout": "^1.4.2",
+    "angular-ui-router": "^0.4.2",
     "angular-scroll-glue": "^2.2.0",
     "angular-cookies": "=1.5.8",
     "angular-emojione": "*",
