--- a/Journal/bower.json
+++ b/Journal/bower.json
@@ -26,28 +26,28 @@
     "bootstrap": "^3.3.6",
     "bootstrap-colorpicker": "^2.3.3",
     "d3": "^4.2.3",
-    "angular": "1.5.8",
+    "angular": "1.6.4",
     "angular-bootstrap": "^2.1.3",
     "angular-bootstrap-toggle": "^0.1.2",
     "angular-dragdrop": "^1.0.13",
     "angular-hotkeys": "chieffancypants/angular-hotkeys#^1.7.0",
     "angular-input-modified": "^2.3.3",
     "angular-moment": "^0.10.0",
-    "angular-route": "1.5.8",
     "angular-ui": "^0.4.0",
     "angular-ui-layout": "^1.4.2",
     "angular-ui-router": "^0.4.2",
     "angular-scroll-glue": "^2.2.0",
-    "angular-cookies": "=1.5.8",
+    "angular-cookies": "=1.6.4",
     "angular-emojione": "*",
     "angular-gettext": "^2.3.9",
+    "angular-material": "^1.1.4",
     "moment": "~2.15.1",
     "moment-duration-format": "^1.3.0",
     "EaselJS": "^0.8.2",
     "yasgui": "^2.4.1"
   },
   "resolutions": {
-    "angular": "1.5.8",
+    "angular": "1.6.4",
     "moment": "^2.10.0",
     "jquery": ">=1.6"
   },
