--- a/Journal/bower.json
+++ b/Journal/bower.json
@@ -43,10 +43,12 @@
     "moment": "~2.15.1",
     "moment-duration-format": "^1.3.0",
     "EaselJS": "^0.8.2",
-    "yasgui": "^2.4.1"
+    "yasgui": "^2.4.1",
+    "angular-sanitize": "^1.6.4",
+    "angular-markdown-directive": "^0.3.1"
   },
   "resolutions": {
-    "angular": "1.5.8",
+    "angular": "1.6.4",
     "moment": "^2.10.0",
     "jquery": ">=1.6"
   },
