--- a/Journal/bower.json
+++ b/Journal/bower.json
@@ -44,7 +44,8 @@
     "moment": "~2.15.1",
     "moment-duration-format": "^1.3.0",
     "EaselJS": "^0.8.2",
-    "yasgui": "^2.4.1"
+    "yasgui": "^2.4.1",
+    "angular-masonry": "^0.17.0"
   },
   "resolutions": {
     "angular": "1.6.4",
@@ -58,6 +59,12 @@
         "dist/css/bootstrap.css",
         "dist/css/bootstrap-theme.css",
         "less/bootstrap.less"
+      ]
+    },
+    "outlayer": {
+      "main": [
+        "item.js",
+        "outlayer.js"
       ]
     }
   }
