Using masonry for layouting the file cards.

--- a/Journal/bower.json
+++ b/Journal/bower.json
@@ -61,6 +61,11 @@
         "less/bootstrap.less"
       ]
     },
+    "ev-emitter": {
+      "dependencies": {
+        "jquery-bridget": "~2.0.0"
+      }
+    },
     "outlayer": {
       "main": [
         "item.js",
