--- a/Api/Api.csproj
+++ b/Api/Api.csproj
@@ -89,10 +89,13 @@
     <Compile Include="Modules\TopicsModule.cs" />
     <Compile Include="Modules\TasksModule.cs" />
     <Compile Include="Modules\UsersModule.cs" />
+    <Compile Include="Parameters\CommentParameter.cs" />
     <Compile Include="Parameters\MarkParameter.cs" />
+    <Compile Include="Parameters\Parameter.cs" />
     <Compile Include="Parameters\ProjectParameter.cs" />
     <Compile Include="Parameters\TaskParameter.cs" />
     <Compile Include="Parameters\TopicParameter.cs" />
+    <Compile Include="Platform\INotifier.cs" />
     <Compile Include="Platform\IThumbnailProvider.cs" />
     <Compile Include="IO\ArchiveManifest.cs" />
     <Compile Include="IO\ArchiveManifestCreator.cs" />
