--- a/Journal/package.json
+++ b/Journal/package.json
@@ -38,11 +38,12 @@
     "grunt-script-link-tags": "^1.0.2",
     "grunt-strip-code": "^1.0.4",
     "grunt-wiredep": "^3.0.1",
+    "livereload": "^0.6.0",
+    "paho-mqtt": "^1.0.3",
     "jasmine-core": "^2.6.1",
     "karma": "^1.7.0",
     "karma-jasmine": "^1.1.0",
     "karma-phantomjs-launcher": "^1.0.4",
-    "karma-spec-reporter": "0.0.31",
-    "livereload": "^0.6.0"
+    "karma-spec-reporter": "0.0.31"
   }
 }
