--- a/Journal/bower.json
+++ b/Journal/bower.json
@@ -28,6 +28,7 @@
     "d3": "^4.2.3",
     "angular": "1.6.4",
     "angular-bootstrap": "^2.1.3",
+    "angular-animate": "1.6.4",
     "angular-bootstrap-toggle": "^0.1.2",
     "angular-dragdrop": "^1.0.13",
     "angular-hotkeys": "chieffancypants/angular-hotkeys#^1.7.0",
@@ -45,7 +46,8 @@
     "moment-duration-format": "^1.3.0",
     "EaselJS": "^0.8.2",
     "yasgui": "^2.4.1",
-    "angular-masonry": "^0.17.0"
+    "angular-masonry": "^0.17.0",
+    "emojionearea": "^3.1.7"
   },
   "resolutions": {
     "angular": "1.6.4",
