Implemented project members panel. Refactored edit person dialog to use Material UI.

--- a/Apid/Apid.csproj
+++ b/Apid/Apid.csproj
@@ -122,7 +122,7 @@
     <Compile Include="Modules\SparqlModule.cs" />
     <Compile Include="Modules\SyncModule.cs" />
     <Compile Include="Platform\Notifier.cs" />
-    <Compile Include="Platform\OwnerProvider.cs" />
+    <Compile Include="Platform\AccountOwnerProvider.cs" />
     <Compile Include="Plugins\PluginManifestRegistryInfo.cs" />
     <Compile Include="Plugins\ProgramInstallationWatchdogFactory.cs" />
     <Compile Include="Protocols\Atom\AtomLink.cs" />
