--- a/Journal/bower.json
+++ b/Journal/bower.json
@@ -43,13 +43,14 @@
     "angular-gettext": "^2.3.9",
     "angular-material": "^1.1.4",
     "angular-masonry": "^0.17.0",
+    "angular-markdown-directive": "^0.3.1",
+    "ng-letter-avatar": "ngletteravatar#^4.0.4",
     "moment": "~2.15.1",
     "moment-duration-format": "^1.3.0",
     "EaselJS": "^0.8.2",
     "yasgui": "^2.4.1",
     "angular-sanitize": "^1.6.4",
-    "emojionearea": "^3.1.7",
-    "angular-markdown-directive": "^0.3.1"
+    "emojionearea": "^3.1.7"
   },
   "resolutions": {
     "angular": "1.6.4",
