--- a/Api/Api.csproj
+++ b/Api/Api.csproj
@@ -118,6 +118,7 @@
     <Compile Include="Progress\TaskProgressInfo.cs" />
     <Compile Include="Progress\TaskProgressInfoList.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Provider\CommentProvider.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
